Minor Changes Fixed.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<!-- END Meta -->
 	
-	<title>Hungry | HTML Template: Single Page Layout</title>
+	<title>SugarQuest | Hame based Bakery</title>
 	
 	<!-- Google Fonts:
 		 Ubuntu          - http://www.google.com/fonts/specimen/Ubuntu
@@ -164,7 +164,7 @@
 	<!-- START Social Icons -->
 	<div class="single-page-social-icons">
 		<ul class="single-page-social-icons-list">
-			<li><a href="http://instagram.com/sugarquest" target="_blank" class="header-social-icon-tooltip" title="Follow us on Facebook!"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://www.facebook.com/sugarquest" target="_blank" class="header-social-icon-tooltip" title="Follow us on Facebook!"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="http://instagram.com/sugarquest" target="_blank" class="header-social-icon-tooltip" title="Find us in Instagram!"><i class="fa fa-instagram"></i></a></li>
 		</ul>
 	</div>
