--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 			<!-- START Site Logo -->
 			<div class="grid-20 tablet-grid-50 mobile-grid-50">
 				<a href="index.html">
-					<img class="site-logo" src="images/assets/logo.gif" style="width:80px;height: 80px;display:inline" alt="Site Logo" />
-					<span style="color:#fff;font-size: 20px;">SugarQuest</span>
+					<img class="site-logo" src="images/assets/logo.gif" style="width:80px;height: 80px;display:inline" alt="SugarQuest" />
+					<img class="site-logo" src="images/assets/tagLine.png" style="width:100px;height:40px;display:inline" alt="Its Love at First Bite" />
+					<!--<span style="color:#fff;font-size: 20px;">SugarQuest</span>-->
 				</a>
 			</div>
 			<!-- END Site Logo -->
@@ -120,13 +121,14 @@
 			 data-cycle-swipe-fx="fade"
 			 data-cycle-fx="fade"
 			 data-cycle-speed="1200"
-			 data-cycle-timeout="16000">
+			 data-cycle-timeout="3000">
 			
 			<!-- Images -->
 			<img src="images/demo/slides/slide-image-01.jpg" alt="Slide Image 01" />
 			<img src="images/demo/slides/slide-image-02.jpg" alt="Slide Image 02" />
 			<img src="images/demo/slides/slide-image-03.jpg" alt="Slide Image 03" />
-			
+			<img src="images/demo/slides/slide-image-04.jpg" alt="Slide Image 03" />
+			<img src="images/demo/slides/slide-image-05.jpg" alt="Slide Image 03" />
 			<!-- Prev/Next Buttons -->
 			<div class="cycle-prev"><i class="fa fa-chevron-left"></i></div>
 			<div class="cycle-next"><i class="fa fa-chevron-right"></i></div>
