Minor layout fixes

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 		
 			<!-- START Section Images -->
 			<div class="grid-50 tablet-grid-100 mobile-grid-100">
-				<div class="wow rotateIn" data-wow-duration="2s" data-wow-offset="250">
+				<div class="wow rotateIn" data-wow-duration="2s" data-wow-offset="150">
 					<div class="about-images">
 						<img class="about-main" src="images/demo/about/kangan.jpg" alt="About Main Image" />
 						<!--<img class="about-inset" src="images/demo/about/about-inset.jpg" alt="About Inset Image" />-->
@@ -644,7 +644,7 @@
 			
 			<!-- START Section Content -->
 			<div class="grid-50 tablet-prefix-10 tablet-grid-80 tablet-suffix-10 mobile-grid-100 tablet-center mobile-center">
-				<div class="wow fadeInRight" data-wow-duration="2s" data-wow-offset="250">
+				<div class="wow fadeInRight" data-wow-duration="2s" data-wow-offset="150"  style="width: 80%;">
 					<h4 class="header-divider">I Started, Directly from home...</h4>
 					<!--<p style="text-align: right;"><strong>-Kangan Kansal</strong></p>-->
 					<p>She is the yougest chef in town, having cooking experience of nearly 6 years.
@@ -669,7 +669,7 @@
 		<div class="grid-container">
 		
 			<!-- START Section Heading -->
-			<div class="wow fadeIn" data-wow-duration="2s" data-wow-offset="250">
+			<div class="wow fadeIn" data-wow-duration="2s" data-wow-offset="150">
 				<h1 class="section-heading-alt-title">What our Customers Say<span>&hellip;</span></h1>
 			</div>
 			<!-- END Section Heading -->
