--- a/shakes.html
+++ b/shakes.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<!-- END Meta -->
 	
-	<title>SugarQuest | Hame based Bakery</title>
+	<title>SugarQuest | Home based Bakery</title>
 	
 	<!-- Google Fonts:
 		 Ubuntu          - http://www.google.com/fonts/specimen/Ubuntu
