--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@ Happily Baking Happiness, Just For You!
 					</div>-->
 					<div class="contact-email">
 						<i class="fa fa-envelope-square"></i>
-						<a class="email-link" href="mailto:kangankansal@gmail.com">kangankansal@gmail.com</a>
+						<a class="email-link" href="mailto:sugarquest.orders@gmail.com">sugarquest.orders@gmail.com</a>
 					</div>
 					<!--<div class="contact-address">
 						<i class="fa fa-caret-square-o-down"></i>
