PlaceOrder Form Updated.

--- a/index.html
+++ b/index.html
@@ -705,25 +705,25 @@ Happily Baking Happiness, Just For You!
 							</p>-->
 							
 							<!-- Message Field -->
-							<label for="res_email">Delivery Address:</label>
-							<textarea name="res_message" id="res_message" cols="8" rows="8"></textarea>
+							<label for="res_address">Delivery Address:</label>
+							<textarea name="res_address" id="res_address" cols="8" rows="8"></textarea>
 							<p>
-								<label for="res_amount">Your City:<span>*</span></label>
-								<select name="res_amount" id="res_amount" required>
-									<option value="" selected>Select City...</option>
-									<option value="1">Chandigarh</option>
-									<option value="2">Patiala</option>
-									<option value="3">Panchkula</option>
-									<option value="4">Mohali</option>
-									<option value="4">Thapar University</option>
+								<label for="res_city">Your City:<span>*</span></label>
+								<select name="res_city" id="res_city" required>
+									<option value="Not selected" selected>Select City...</option>
+									<option value="Chandigarh">Chandigarh</option>
+									<option value="Patiala">Patiala</option>
+									<option value="Panchkula">Panchkula</option>
+									<option value="Mohali">Mohali</option>
+									<option value="Thapar University">Thapar University</option>
 								</select>
 							</p>
 							<p>
-								<label for="res_amount">Payment Option:<span>*</span></label>
-								<select name="res_amount" id="res_amount" required>
-									<option value="" selected>Choose Payment Option...</option>
-									<option value="1">Cash on Delivery</option>
-									<option value="2">Paytm Wallet</option>>
+								<label for="res_payment">Payment Option:<span>*</span></label>
+								<select name="res_payment" id="res_payment" required>
+									<option value="Not selected" selected>Choose Payment Option...</option>
+									<option value="Cash on Delivery">Cash on Delivery</option>
+									<option value="Paytm Wallet">Paytm Wallet</option>>
 								</select>
 							</p>
 						</div>
