--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@ Happily Baking Happiness, Just For You!
 		
 
 			<div class="footer-text grid-50 tablet-grid-100 mobile-grid-100">
-				<p>Designed by <a href="http://pulkt.com" target="_blank">Pulkit Aggarwal</a> for <a href="http://StagePlayers.in" target="_blank">StagePlayers</a>. © 2017 All Rights Reserved.</p>
+				<p>Designed by <a href="http://pulkt.com" target="_blank">Pulkit Aggarwal</a>. © 2022 All Rights Reserved.</p>
 			</div>
 		
 		</div>
