--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		 Ubuntu          - http://www.google.com/fonts/specimen/Ubuntu
 		 Droid Serif     - http://www.google.com/fonts/specimen/Droid+Serif 
 		 Aguafina Script - http://www.google.com/fonts/specimen/Aguafina+Script -->
-	<link href="http://fonts.googleapis.com/css?family=Ubuntu:400,700%7CDroid+Serif:400,400italic,700,700italic%7CAguafina+Script" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700%7CDroid+Serif:400,400italic,700,700italic%7CAguafina+Script" rel="stylesheet" type="text/css">
 	
 	<!-- START Stylesheets -->
 	<link rel="stylesheet" href="css/formalize.css" media="all">
